Created navbar and body

--- a/index.html
+++ b/index.html
@@ -7,6 +7,51 @@
     <title>Jan Pantic WDF CA</title>
 </head>
 <body>
-    <h1 class="text-primary">TTTT</h1>
+    <!-- Navbar -->
+    <nav class="navbar navbar-light navbar-expand-lg bg-secondary">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuItems" aria-controls="menuItems" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            <div class="row collapse navbar-collapse" id="menuItems">
+                <div class="col-5 navbar-nav d-flex justify-content-between">
+                    <li class="nav-item">
+                    <a href="#" class="nav-link text-white text-center">Locations</a>
+                    </li>
+                    <li class="nav-item">
+                    <a href="#" class="nav-link active text-white text-center">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                    <a href="#" class="nav-link active text-white text-center">Catering</a>
+                    </li>
+                    <li class="nav-item">
+                    <a href="#" class="nav-link active text-white text-center">Contact</a>
+                    </li>
+                </div>
+                
+                    
+                <div class="col-2">
+                    <a class="navbar-brand text-white space-between" href="#">
+                        <img src="images/logo.png" alt="Greenville Deli" width="100%">
+                    </a>
+                </div>
+
+                <div class="col-5 navbar-nav d-flex justify-content-between">
+                    <a href="#" class="nav-item nav-link active text-white text-center">Story</a>
+                    <a href="#" class="nav-item nav-link active text-white text-center">Nutrition</a>
+                    <a href="#" class="nav-item nav-link active text-white text-center">Jobs</a>
+                    <a href="#" class="nav-item nav-link active text-white text-center">Register</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <!-- Body -->
+    <div class="container-flex bg-primary">
+        <div class="container">
+            <div class="col-12 d-flex justify-content-center">
+                <img src="images/sandwich.jpg" class="img-cropped" width="100%" height="569" alt="sandwich">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
