Created main component details. Edited the box shadow class, and added it to objects

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-dark navbar-expand-lg bg-secondary">
+    <nav class="navbar navbar-dark navbar-expand-lg bg-secondary shadow">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuItems" aria-controls="menuItems" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -61,18 +61,18 @@
     </nav>
     <!-- Body -->
     <div class="container-flex bg-primary mt-4">
-        <div class="card text-bg-dark">
+        <div class="card text-bg-dark shadow">
             <div class="col-12">
                 <img src="images/sandwich.jpg" class="card-img img-cropped" width="100%" height= "569"alt="sandwich">
                 <div class="card-img-overlay d-flex justify-content-center flex-column text-center">
                     <h1 class="card-title fw-medium">Bringing Quality Munch To Dublin</h1>
                         <form class="d-flex justify-content-center text-center" role="search">
-                            <div class="col-12 col-sm-8 col-md-4 col-xl-2">
-                            <input class="form-control me-2" type="search" placeholder="..." aria-label="Search">
+                            <div class="col-12 col-sm-8 col-md-4 col-xl-2 ">
+                            <input class="form-control me-2 shadow" type="search" placeholder="..." aria-label="Search">
                             </div>
                         </form>
                     <div class="my-2">
-                        <button class="btn btn-responsive btn-villeorange btn-lg px-5 text-primary" type="submit">Order Now</button>
+                        <button class="btn btn-responsive btn-villeorange btn-lg px-5 text-primary shadow " type="submit">Order Now</button>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
         <div class="container">
             <div class="row mt-lg-6">
                 <div class="col-12 col-sm-12 col-xl-5 my-5">
-                    <img src="images/rathmines-min.jpeg" class="img-cropped" width="100%" height="409"alt="rathmines area">
+                    <img src="images/rathmines-min.jpeg" class="img-cropped shadow" width="100%" height="409"alt="rathmines area">
                 </div>
                 <div class="col-1"></div>
                 
@@ -92,10 +92,10 @@
             </div>
         </div>
 
-        <div class="card text-bg-dark mt-4 mt-lg-6">
+        <div class="card text-bg-dark mt-4 mt-lg-6 shadow">
             <div class="col-12">
                 <img src="images/bg1.jpg" class="card-img img-cropped" width="100%" height="215" alt="greenville bg">
-                <div class="card-img-overlay d-flex justify-content-center flex-column text-center">
+                <div class="card-img-overlay d-flex justify-content-center flex-column text-center ">
                     <h1 class="card-title display-1 fw-medium">What We Offer</h1>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                     <h1 class="text-secondary fw-normal fs-2">We are a small restaurant owned by childhood friends Adam Fleetwood and Eve Whitaker</h1>
                 </div>
                 <div class="col-6 col-sm-6 col-xl-3 my-5">
-                    <img src="images/rathmines-min.jpeg" class="img-cropped" width="100%" height="208"alt="rathmines area">
+                    <img src="images/rathmines-min.jpeg" class="img-cropped shadow" width="100%" height="208"alt="rathmines area">
                 </div>   
             </div>
             <div class="row justify-content-between">
@@ -117,7 +117,7 @@
                     <h1 class="text-secondary fw-normal fs-2">We are a small restaurant owned by childhood friends Adam Fleetwood and Eve Whitaker</h1>
                 </div>
                 <div class="col-6 col-sm-6 col-xl-3 my-5">
-                    <img src="images/rathmines-min.jpeg" class="img-cropped" width="100%" height="208"alt="rathmines area">
+                    <img src="images/rathmines-min.jpeg" class="img-cropped shadow" width="100%" height="208"alt="rathmines area">
                 </div>   
             </div>
         </div>
