--- a/details.html
+++ b/details.html
@@ -68,12 +68,12 @@
     <div class="container-fluid bg-primary py-5">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-5">
-                    <img src="images/rathmines-min.jpeg" class="img-cropped shadow mt-3" width="100%" height="409"alt="rathmines area">
+                <div class="col-12 col-lg-5">
+                    <img src="images/vegansandwich.png" class="img-cropped shadow mt-3" width="100%" height="409"alt="rathmines area">
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-lg-6">
                     <div>
-                        <p class="display-4 text-darkertext fw-medium">Vegan Sandwich</p>
+                        <p class="display-4 text-darkertext fw-medium mt-4 mt-lg-0">Vegan Sandwich</p>
                         <h3 class="fw-normal my-5">Sandwich with chickpeas and sourdough bread.</h3>
                         <h3 class="fw-light fst-italic">Suitable for vegans and vegetarians.</h3>
                         <h2 class="fw-semibold mt-4 mb-2 text-success">€5.00</h2>
@@ -84,20 +84,135 @@
                               <h3 class="fw-normal">Add soup of the day and a drink +<span class="fw-semibold my-5 text-success">€4.00</span></h> 
                             </label>
                         </div>
-                        <div class="row">
+                        <div class="row justify-content-between">
                             <div class="d-grid col-5 my-3">
-                                <button class="btn btn-responsive btn-outline-success btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                                <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                            </div>
+
+                            <div class="d-grid col-2 my-3">
+                                <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <h4 class="fw-normal">Category: Sandwiches</h4>
+                <div class="col-12">
+                    <h4 class="fw-normal">Category: Sandwiches</h4>
+                </div>
+                <div class="col-12">
+                    <h2 class="fw-medium mt-5">Description</h2>
+                </div>
+
+            </div>
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body bg-primary outline border border-secondary rounded-2">
+                        <h5 class="text-secondary fw-normal pb-7">Sandwich with chickpeas and sourdough bread.</h5>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Related Products List -->
+            <div class="col-12">
+                <h2 class="fw-medium mt-5">Related Products</h2>
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-6 col-lg-2">
+                    <img src="images/pulledpork.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+                </div>
+                <div class="col-6">
+                    <div>
+                        <h1 class="text-darkertext fw-medium mt-2">The Asian Pulled Pork</h1>
+                        <h3 class="fw-normal my-4">Slow cooked pulled pork, spicy asian slaw...</h3>
+                        <h2 class="fw-semibold mt-5 text-success">€9.80</h2>                  
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                    <div class="row justify-content-between">
+                        <div class="d-grid col-7 my-3">
+                            <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                        </div>
+
+                        <div class="d-grid col-3 my-3">
+                            <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-6 col-lg-2">
+                    <img src="images/vegansandwich.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+                </div>
+                <div class="col-6">
+                    <div>
+                        <h1 class="text-darkertext fw-medium mt-2">The Stuffed Chicken</h1>
+                        <h3 class="fw-normal my-4">Zesty lemon chicken, herby stuffing...</h3>
+                        <h2 class="fw-semibold mt-5 text-success">€9.50</h2>                  
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                    <div class="row justify-content-between">
+                        <div class="d-grid col-7 my-3">
+                            <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                        </div>
+
+                        <div class="d-grid col-3 my-3">
+                            <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-6 col-lg-2">
+                    <img src="images/vegansandwich.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+                </div>
+                <div class="col-6">
+                    <div>
+                        <h1 class="text-darkertext fw-medium mt-2">The Asian Pulled Pork</h1>
+                        <h3 class="fw-normal my-4">Sandwich with chickpeas and sourdough bread.</h3>
+                        <h2 class="fw-semibold mt-5 text-success">€5.00</h2>                  
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                    <div class="row justify-content-between">
+                        <div class="d-grid col-7 my-3">
+                            <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                        </div>
+
+                        <div class="d-grid col-3 my-3">
+                            <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-6 col-lg-2">
+                    <img src="images/vegansandwich.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+                </div>
+                <div class="col-6">
+                    <div>
+                        <h1 class="text-darkertext fw-medium mt-2">The Asian Pulled Pork</h1>
+                        <h3 class="fw-normal my-4">Sandwich with chickpeas and sourdough bread.</h3>
+                        <h2 class="fw-semibold mt-5 text-success">€5.00</h2>                  
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                    <div class="row justify-content-between">
+                        <div class="d-grid col-7 my-3">
+                            <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                        </div>
+
+                        <div class="d-grid col-3 my-3">
+                            <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    
-    <div class="container-fluid bg-secondary py-5 mt-4 mt-lg-6 footer">
+    <!-- Footer -->
+    <div class="container-fluid bg-secondary py-5 mt-0 mt-lg-0 footer">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-4 my-2">
