fixed main page

--- a/details.html
+++ b/details.html
@@ -129,11 +129,11 @@
                 </div>
                 <div class="col-12 col-lg-4 mt-0 mt-lg-5">
                     <div class="row justify-content-between">
-                        <div class="d-grid col-7 my-3">
+                        <div class="d-grid col-6 col-lg-7 my-3">
                             <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
                         </div>
 
-                        <div class="d-grid col-3 my-3">
+                        <div class="d-grid col-2 col-lg-3 my-3">
                             <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
             </div>
             <div class="row mt-5">
                 <div class="col-6 col-lg-2">
-                    <img src="images/vegansandwich.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+                    <img src="images/stuffedchicken.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
                 </div>
                 <div class="col-6">
                     <div>
@@ -152,11 +152,11 @@
                 </div>
                 <div class="col-12 col-lg-4 mt-0 mt-lg-5">
                     <div class="row justify-content-between">
-                        <div class="d-grid col-7 my-3">
+                        <div class="d-grid col-6 col-lg-7 my-3">
                             <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
                         </div>
 
-                        <div class="d-grid col-3 my-3">
+                        <div class="d-grid col-2 col-lg-3 my-3">
                             <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
                         </div>
                     </div>
@@ -164,22 +164,22 @@
             </div>
             <div class="row mt-5">
                 <div class="col-6 col-lg-2">
-                    <img src="images/vegansandwich.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+                    <img src="images/veganbombay.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
                 </div>
                 <div class="col-6">
                     <div>
-                        <h1 class="text-darkertext fw-medium mt-2">The Asian Pulled Pork</h1>
-                        <h3 class="fw-normal my-4">Sandwich with chickpeas and sourdough bread.</h3>
-                        <h2 class="fw-semibold mt-5 text-success">€5.00</h2>                  
+                        <h1 class="text-darkertext fw-medium mt-2">The Vegan Bombay</h1>
+                        <h3 class="fw-normal my-4">Vegan bombay sandwich with...</h3>
+                        <h2 class="fw-semibold mt-5 text-success">€9.50</h2>                  
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 mt-0 mt-lg-5">
                     <div class="row justify-content-between">
-                        <div class="d-grid col-7 my-3">
+                        <div class="d-grid col-6 col-lg-7 my-3">
                             <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
                         </div>
 
-                        <div class="d-grid col-3 my-3">
+                        <div class="d-grid col-2 col-lg-3 my-3">
                             <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
                         </div>
                     </div>
@@ -187,22 +187,22 @@
             </div>
             <div class="row mt-5">
                 <div class="col-6 col-lg-2">
-                    <img src="images/vegansandwich.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+                    <img src="images/melt.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
                 </div>
                 <div class="col-6">
                     <div>
-                        <h1 class="text-darkertext fw-medium mt-2">The Asian Pulled Pork</h1>
-                        <h3 class="fw-normal my-4">Sandwich with chickpeas and sourdough bread.</h3>
-                        <h2 class="fw-semibold mt-5 text-success">€5.00</h2>                  
+                        <h1 class="text-darkertext fw-medium mt-2">The Mexicano Melt</h1>
+                        <h3 class="fw-normal my-4">Spicy chorizo, crispy bacon, jalapeños...</h3>
+                        <h2 class="fw-semibold mt-5 text-success">€9.50</h2>                  
                     </div>
                 </div>
                 <div class="col-12 col-lg-4 mt-0 mt-lg-5">
                     <div class="row justify-content-between">
-                        <div class="d-grid col-7 my-3">
+                        <div class="d-grid col-6 col-lg-7 my-3">
                             <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
                         </div>
 
-                        <div class="d-grid col-3 my-3">
+                        <div class="d-grid col-2 col-lg-3 my-3">
                             <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
                         </div>
                     </div>
