--- a/index.html
+++ b/index.html
@@ -103,22 +103,24 @@
 
         <div class="container">
             <div class="row justify-content-between mt-4 mt-lg-6">
-                <div class="col-6 col-xl-6 my-4 ">
+                <div class="col-6 col-xl-6 my-4">
                     <div class="display-3 text-secondary fw-medium">Vegan Options</div>
-                    <h1 class="text-secondary fw-normal fs-2">We are a small restaurant owned by childhood friends Adam Fleetwood and Eve Whitaker</h1>
+                    <h1 class="text-secondary fw-normal fs-2">We offer many vegan food options!</h1>
                 </div>
-                <div class="col-6 col-sm-6 col-xl-3 my-5">
-                    <img src="images/rathmines-min.jpeg" class="img-cropped shadow" width="100%" height="208"alt="rathmines area">
+                <div class="col-6 col-sm-6 col-xl-5 my-5">
+                    <img src="images/veganfood.png" class="img-cropped shadow" width="100%" height="409"alt="rathmines area">
                 </div>   
             </div>
             <div class="row justify-content-between">
-                <div class="col-6 col-xl-6 my-4 ">
-                    <div class="display-3 text-secondary fw-medium">Office Catering</div>
-                    <h1 class="text-secondary fw-normal fs-2">We are a small restaurant owned by childhood friends Adam Fleetwood and Eve Whitaker</h1>
-                </div>
-                <div class="col-6 col-sm-6 col-xl-3 my-5">
-                    <img src="images/rathmines-min.jpeg" class="img-cropped shadow" width="100%" height="208"alt="rathmines area">
+                
+                <div class="col-6 col-sm-6 col-xl-5 my-5">
+                    <img src="images/catering.png" class="img-cropped shadow" width="100%" height="409"alt="rathmines area">
                 </div>   
+
+                <div class="col-6 col-xl-5 my-4 ">
+                    <div class="display-3 text-secondary fw-medium">Office Catering</div>
+                    <h1 class="text-secondary fw-normal fs-2">We do catering for offices and parties.</h1>
+                </div>
             </div>
         </div>
         <!-- Footer -->
