--- a/menu.html
+++ b/menu.html
@@ -60,8 +60,205 @@
         </div>
     </nav>
 
+
+    <div class="container-fluid bg-secondary py-1 mt-4 shadow">
+        <p class="display-5 text-white fw-medium text-center mb-2">Menu Items</p>
+    </div>
+
+    <div class="container-fluid bg-primary py-2 pb-5">
+        <div class="container">
+
+        <div class="row mt-5">
+            <div class="col-6 col-lg-2">
+                <a href="details.html"><img src="images/vegansandwich.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area"></a>
+            </div>
+            <div class="col-6">
+                <div>
+                    <h1 class="text-darkertext fw-medium mt-2">Vegan Sandwich</h1>
+                    <h3 class="fw-normal my-4">Sandwich with chickpeas and sourdough bread....</h3>
+                    <h2 class="fw-semibold mt-5 text-success">€5.00</h2>                  
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                <div class="row justify-content-between">
+                    <div class="d-grid col-6 col-lg-7 my-3">
+                        <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                    </div>
+
+                    <div class="d-grid col-2 col-lg-3 my-3">
+                        <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-6 col-lg-2">
+                <img src="images/pulledpork.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+            </div>
+            <div class="col-6">
+                <div>
+                    <h1 class="text-darkertext fw-medium mt-2">The Asian Pulled Pork</h1>
+                    <h3 class="fw-normal my-4">Slow cooked pulled pork, spicy asian slaw...</h3>
+                    <h2 class="fw-semibold mt-5 text-success">€9.80</h2>                  
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                <div class="row justify-content-between">
+                    <div class="d-grid col-6 col-lg-7 my-3">
+                        <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                    </div>
+
+                    <div class="d-grid col-2 col-lg-3 my-3">
+                        <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-6 col-lg-2">
+                <img src="images/stuffedchicken.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+            </div>
+            <div class="col-6">
+                <div>
+                    <h1 class="text-darkertext fw-medium mt-2">The Stuffed Chicken</h1>
+                    <h3 class="fw-normal my-4">Zesty lemon chicken, herby stuffing...</h3>
+                    <h2 class="fw-semibold mt-5 text-success">€9.50</h2>                  
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                <div class="row justify-content-between">
+                    <div class="d-grid col-6 col-lg-7 my-3">
+                        <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                    </div>
+
+                    <div class="d-grid col-2 col-lg-3 my-3">
+                        <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-6 col-lg-2">
+                <img src="images/veganbombay.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+            </div>
+            <div class="col-6">
+                <div>
+                    <h1 class="text-darkertext fw-medium mt-2">The Vegan Bombay</h1>
+                    <h3 class="fw-normal my-4">Vegan bombay sandwich with...</h3>
+                    <h2 class="fw-semibold mt-5 text-success">€9.50</h2>                  
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                <div class="row justify-content-between">
+                    <div class="d-grid col-6 col-lg-7 my-3">
+                        <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                    </div>
+
+                    <div class="d-grid col-2 col-lg-3 my-3">
+                        <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-6 col-lg-2">
+                <img src="images/melt.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+            </div>
+            <div class="col-6">
+                <div>
+                    <h1 class="text-darkertext fw-medium mt-2">The Mexicano Melt</h1>
+                    <h3 class="fw-normal my-4">Spicy chorizo, crispy bacon, jalapeños...</h3>
+                    <h2 class="fw-semibold mt-5 text-success">€9.50</h2>                  
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                <div class="row justify-content-between">
+                    <div class="d-grid col-6 col-lg-7 my-3">
+                        <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                    </div>
+
+                    <div class="d-grid col-2 col-lg-3 my-3">
+                        <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-6 col-lg-2">
+                <img src="images/caprese.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+            </div>
+            <div class="col-6">
+                <div>
+                    <h1 class="text-darkertext fw-medium mt-2">The Caprese Vegetarian</h1>
+                    <h3 class="fw-normal my-4">Layers of mozzarella, sliced plum tomatoes,...</h3>
+                    <h2 class="fw-semibold mt-5 text-success">€9.00</h2>                  
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                <div class="row justify-content-between">
+                    <div class="d-grid col-6 col-lg-7 my-3">
+                        <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                    </div>
+
+                    <div class="d-grid col-2 col-lg-3 my-3">
+                        <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-6 col-lg-2">
+                <img src="images/hamcheese.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+            </div>
+            <div class="col-6">
+                <div>
+                    <h1 class="text-darkertext fw-medium mt-2">The Ham and 3 Cheese</h1>
+                    <h3 class="fw-normal my-4">Home baked Honey glazed ham, smoked applewood...</h3>
+                    <h2 class="fw-semibold mt-5 text-success">€9.50</h2>                  
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                <div class="row justify-content-between">
+                    <div class="d-grid col-6 col-lg-7 my-3">
+                        <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                    </div>
+
+                    <div class="d-grid col-2 col-lg-3 my-3">
+                        <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-6 col-lg-2">
+                <img src="images/thereuben.png" class="img-cropped shadow mt-3" width="100%" height="189"alt="rathmines area">
+            </div>
+            <div class="col-6">
+                <div>
+                    <h1 class="text-darkertext fw-medium mt-2">The Reuben</h1>
+                    <h3 class="fw-normal my-4">Slices of spiced pastrami with Swiss cheese, Pickles,...</h3>
+                    <h2 class="fw-semibold mt-5 text-success">€10.00</h2>                  
+                </div>
+            </div>
+            <div class="col-12 col-lg-4 mt-0 mt-lg-5">
+                <div class="row justify-content-between">
+                    <div class="d-grid col-6 col-lg-7 my-3">
+                        <button class="btn btn-responsive btn-success text-white btn-lg shadow rounded-2 px-4" type="button">Add To Cart</button>
+                    </div>
+
+                    <div class="d-grid col-2 col-lg-3 my-3">
+                        <button class="btn btn-responsive btn-secondary btn-lg shadow rounded-2" type="button">0</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
-    <div class="container-fluid bg-secondary py-5 mt-4 mt-lg-6 footer">
+    </div>
+</div>
+    
+    <div class="container-fluid bg-secondary py-5 mt-0 mt-lg-0 footer">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-4 my-2">
